home page effect fixed

--- a/css/main.css
+++ b/css/main.css
@@ -256,6 +256,8 @@ html {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-kerning: none;
           font-kerning: none;
+          scroll-behavior: smooth;
+
 }
 
 body {
