--- a/css/main.css
+++ b/css/main.css
@@ -194,9 +194,9 @@
   --blockquote-color-light: #ffffff;
   --blockquote-color-dark: #262626;
   /* Paragraph */
-  --paragraph-max-font-size: 18;
-  --paragraph-min-font-size: 16;
-  --paragraph-line-height: 1.8;
+  --paragraph-max-font-size: 22;
+  --paragraph-min-font-size: 18;
+  --paragraph-line-height: 1.5;
   --paragraph-color-light: #cccccc;
   --paragraph-color-dark: #262626;
   /* Dropcap */
@@ -258,6 +258,10 @@ html {
           font-kerning: none;
           scroll-behavior: smooth;
 
+}
+
+.thick-font{
+  font-family: "Kanit", sans-serif;
 }
 
 body {
@@ -660,8 +664,8 @@ a:hover {
 /* 5. buttonBordered */
 /* ======================================================================== */
 .button_bordered.button_white {
-  border-color: #fff;
-  color: #fff;
+  border-color: #f8e400;
+  color: #f8e400;
 }
 
 .button_bordered.button_black {
@@ -7326,7 +7330,7 @@ a img.aligncenter {
 /* 92. typography */
 /* ======================================================================== */
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, .xl {
-  font-family: var(--font-secondary);
+  font-family: "Kanit", sans-serif;
 }
 
 h1, h2, h3 {
@@ -12260,4 +12264,71 @@ small, .small {
 
 .mt-10{
   margin-top: 10px;
+}
+
+
+/***home logos****/
+
+.logo-section {
+  text-align: center;
+  padding: 10px 0;
+ 
+}
+
+.logo-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(110px, 0fr));
+  
+}
+.logo-grid img {
+  width: 100%;
+  height: auto;
+  max-width: 110px;
+  object-fit: contain;
+  border: 0.5px solid rgba(255, 255, 255, 0.2);
+  padding: 15px;
+}
+@media (max-width: 768px) {
+  .logo-grid {
+      grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  }
+}
+
+.highlight-text{
+  position: relative;
+  display: inline-block;
+  color: #6b6a6a;
+}
+
+.highlight-text::before{
+  content: "";
+    position: absolute;
+    left: 0;
+    top: 73%;
+    width: 100%;
+    height: 9%;
+    background: #f8e400;
+    transition: opacity 0.6s ease;
+}
+
+.figure-service__header{
+  text-align: justify;
+}
+
+.card{
+  border: 2px solid #f8e400;
+  border-radius: 25px;
+  background-color: #fff;
+  padding: 15px;
+  margin-top: 20px;
+
+}
+.card p{
+  text-align: center;
+  font-size: 18px;
+  line-height: 28px;
+}
+
+.card video{
+  max-width: 150px;
 }
